ingress.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2 
kind: Deployment 
metadata: 
  name: sample-deployment
spec: 
  replicas: 4
  selector: 
    matchLabels: 
      app: sample
  template: 
    metadata: 
      labels: 
        app: sample
      annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "8888"
    spec: 
      containers: 
      - name: sample 
        image: tsugunt/sample
        ports: 
        - containerPort: 8888 
---
apiVersion: v1 
kind: Service 
metadata: 
  name: sample-service
spec: 
  selector: 
    app: sample
  ports: 
  - protocol: TCP 
    port: 80 
    targetPort: 8888
  type: LoadBalancer   
---
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata: 
#   name: sample-ingress
# spec:
#   rules: 
#   - http:
#       paths: 
#       - backend:
#           serviceName: sample-service
#           servicePort: 80
#       - backend:
#           serviceName: my-service
#           servicePort: 80
# ---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: sample-ingress
spec:
  rules: 
  - http:
      paths: 
      - backend:
          serviceName: sample-svc
          servicePort: 80
      - backend:
          serviceName: my-svc
          servicePort: 80
# ---
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   creationTimestamp: 2016-02-18T18:52:05Z
#   name: game-config
#   resourceVersion: "516"
#   uid: b4952dc3-d670-11e5-8cd0-68f728db1985
# data:
#   game.properties: |
#     enemies=aliens
#     lives=3
#     enemies.cheat=true
#     enemies.cheat.level=noGoodRotten
#     secret.code.passphrase=UUDDLRLRBABAS
#     secret.code.allowed=true
#     secret.code.lives=30
#   ui.properties: |
#     color.good=purple
#     color.bad=yellow
#     allow.textmode=true
#     how.nice.to.look=fairlyNice
